updated to use server

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -5,3 +5,24 @@
 
   background: rgb(30, 35, 50);
 }
+
+.Load {
+  padding-top: 1rem;
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background: rgb(50, 50, 60);
+}
+
+::-webkit-scrollbar-thumb {
+  background: rgb(100, 100, 110);
+  border-radius: 20px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: rgb(80, 80, 90);
+}
