--- a/src/components/Table/Table.css
+++ b/src/components/Table/Table.css
@@ -17,6 +17,17 @@
   margin-top: -1px;
 }
 
+.VisuallyHidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  border: 0;
+}
+
 .Row > select {
   border: none;
   outline: none;
