--- a/src/components/Table/Table.css
+++ b/src/components/Table/Table.css
@@ -5,18 +5,6 @@
   margin-top: 1px;
 }
 
-.Row {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-
-  border: 1px solid white;
-  grid-gap: 1px;
-
-  background: white;
-
-  margin-top: -1px;
-}
-
 .VisuallyHidden {
   position: absolute;
   width: 1px;
@@ -26,6 +14,19 @@
   overflow: hidden;
   clip: rect(0, 0, 0, 0);
   border: 0;
+}
+
+.Row {
+  position: relative;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+
+  border: 1px solid white;
+  grid-gap: 1px;
+
+  background: white;
+
+  margin-top: -1px;
 }
 
 .Row > select {
@@ -38,13 +39,14 @@
   padding: 1rem;
 }
 
-.Row > div {
+.Row > .Child {
+  position: relative;
   text-align: left;
 
   background: rgb(55, 65, 85);
   padding: 1rem;
 }
 
-.Group > div {
+.Group > .Child {
   background: rgb(30, 35, 50);
 }
