added typing for yen

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -26,3 +26,9 @@
 ::-webkit-scrollbar-thumb:hover {
   background: rgb(80, 80, 90);
 }
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
