--- a/src/components/Table/Table.css
+++ b/src/components/Table/Table.css
@@ -44,16 +44,30 @@
   padding: 1rem;
 }
 
+.Child > h1 {
+  z-index: 1;
+  color: black;
+}
+
 .Child > input {
-  width: 10rem;
+  width: 11.5rem;
   position: relative;
 
   border: none;
   outline: none;
 
-  background: rgb(55, 65, 85);
-  color: white;
+  background: rgb(255, 255, 255);
+  color: black;
   font-size: 20px;
+  border-radius: 5px;
+
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  padding-left: 1.1rem;
+  padding-right: 1.1rem;
+
+  margin-left: -1rem;
+  margin-right: -1rem;
 }
 
 .Child {
