--- a/src/components/Table/Table.css
+++ b/src/components/Table/Table.css
@@ -44,13 +44,25 @@
   padding: 1rem;
 }
 
+.Child {
+  display: flex;
+  align-items: center;
+  width: 1fr;
+  height: 4rem;
+
+  position: relative;
+  text-align: left;
+  padding-left: 1rem;
+  overflow: hidden;
+}
+
 .Child > h1 {
   z-index: 1;
   color: black;
 }
 
 .Child > input {
-  width: 11.5rem;
+  width: 80%;
   position: relative;
 
   border: none;
@@ -68,18 +80,6 @@
 
   margin-left: -1rem;
   margin-right: -1rem;
-}
-
-.Child {
-  display: flex;
-  align-items: center;
-  width: 1fr;
-  height: 4rem;
-
-  position: relative;
-  text-align: left;
-  padding-left: 1rem;
-  overflow: hidden;
 }
 
 .Row > .Child {
