--- a/src/components/Table/Table.css
+++ b/src/components/Table/Table.css
@@ -2,7 +2,7 @@
   width: 100%;
   max-width: 30rem;
 
-  margin-top: 3px;
+  margin-top: 2px;
   padding-bottom: 1.5rem;
 }
 
@@ -38,7 +38,7 @@
   border: none;
   outline: none;
 
-  background: rgb(30, 35, 50);
+  background: rgb(35, 35, 35);
   color: white;
   font-size: 20px;
   padding: 1rem;
@@ -57,18 +57,20 @@
 }
 
 .Child > h1 {
+  position: absolute;
+  left: 7.25%;
   z-index: 1;
   color: black;
 }
 
 .Child > input {
-  width: 80%;
+  width: 72.5%;
   position: relative;
 
   border: none;
   outline: none;
 
-  background: rgb(255, 255, 255);
+  background: white;
   color: black;
   font-size: 20px;
   border-radius: 5px;
@@ -83,9 +85,9 @@
 }
 
 .Row > .Child {
-  background: rgb(55, 65, 85);
+  background: rgb(55, 55, 55);
 }
 
 .Group > .Child {
-  background: rgb(30, 35, 50);
+  background: rgb(35, 35, 35);
 }
