--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -7,7 +7,18 @@
 }
 
 .Load {
+  min-height: 100vh;
   padding-top: 1rem;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  flex-direction: column;
+}
+
+.Load > button {
+  width: fit-content;
+  margin: 1rem;
+  padding: 0.5rem;
 }
 
 ::-webkit-scrollbar {
